# heuta_shakala

./: README.md  test
agts-ats/: Readme.md  config.ini  launcher.py  pyproject.toml  quick_start.md
agts-ats/Modules/: HandlerDispatcher.py  __init__.py
agts-ats/logs/: log_2025-09-29_20-09-10.174730.txt  log_2025-09-29_20-16-22.581015.txt  log_2025-09-29_20-17-47.766850.txt  log_2025-09-29_20-22-22.242878.txt  log_2025-09-29_21-52-50.753146.txt  log_2025-09-29_21-59-24.578978.txt  log_2025-09-29_22-01-21.615581.txt  log_2025-09-29_22-09-06.900171.txt  log_2025-09-29_22-23-25.154075.txt  log_2025-09-29_22-26-20.915558.txt  log_2025-09-29_22-27-25.093600.txt  log_2025-09-29_22-30-39.768636.txt  log_2025-09-29_22-31-03.294006.txt  log_2025-09-29_22-34-01.946528.txt  log_2025-09-29_22-34-30.742429.txt  log_2025-09-29_22-38-02.852953.txt  log_2025-09-29_22-40-41.736169.txt  log_2025-09-29_22-45-04.411382.txt  log_2025-09-29_22-45-46.939110.txt  log_2025-09-29_22-51-06.414630.txt  log_2025-09-29_22-53-58.202136.txt  log_2025-09-29_22-54-21.148767.txt  log_2025-09-29_23-07-22.958240.txt  log_2025-09-29_23-11-47.465305.txt  log_2025-09-29_23-16-58.100276.txt  log_2025-09-29_23-19-38.540178.txt  log_2025-09-29_23-20-35.602965.txt  log_2025-09-29_23-42-59.743693.txt  log_2025-09-29_23-46-32.978384.txt  log_2025-09-29_23-55-11.044840.txt  log_2025-09-30_00-04-04.506442.txt  log_2025-09-30_00-05-28.000392.txt  log_2025-09-30_00-05-49.174062.txt  log_2025-09-30_00-08-22.780629.txt  log_2025-09-30_00-14-38.366410.txt  (+81 more)
agts-client/: LICENSE  pyproject.toml  readme.md
(+70 files in other folders)
